name:              soh-site
version:           2.0.0
license:           MIT
license-file:      LICENSE
author:            FP Complete Developers
maintainer:        dev@fpcomplete.com
synopsis:          A site for hosting interactive Haskell tutorials
category:          Web
stability:         Experimental
cabal-version:     >= 1.10
build-type:        Simple
homepage:          www.schoolofhaskell.com

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: Application
                     Azure.BlobStorage
                     Azure.BlobStorage.Account
                     Azure.BlobStorage.Exception
                     Azure.BlobStorage.Request
                     Azure.BlobStorage.Types
                     Azure.BlobStorage.Util
                     Database.Persist.Timed
                     Database.Persist.Timed.Postgresql
                     FP.EnvSettings
                     FP.Extra
                     FP.Logger
                     FP.Store.Blob
                     Foundation
                     Handler.BuildVersion
                     Handler.ContentProxy
                     Handler.ImportContent
                     Handler.Export
                     Handler.Media
                     Handler.RecentContent
                     Handler.RecentContentFeed
                     Handler.RecentContentFeedEntry
                     Handler.Search
                     Handler.Sitemap
                     Handler.TutorialRaw
                     Handler.User
                     Handler.UserFeed
                     Handler.UserTutorial
                     Handler.Users
                     Import
                     Import.DBTimed
                     Import.Files
                     Import.Formatting
                     Import.GroupDesc
                     Import.Migration
                     Import.NewContentMember
                     Import.Prune
                     Import.Recent
                     Import.Tutorial
                     Import.User
                     Model
                     Model.Types
                     Settings
                     Settings.Development
                     Settings.StaticFiles

    ghc-options:     -Wall -fwarn-incomplete-record-updates -auto-all
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -O0
    else
        ghc-options:   -O2

    default-extensions:
                BangPatterns
                ConstraintKinds
                DeriveDataTypeable
                DeriveFunctor
                DeriveGeneric
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                FunctionalDependencies
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                PatternGuards
                QuasiQuotes
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                StandaloneDeriving
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    build-depends: base
                 , MissingH
                 , SHA
                 , aeson
                 , async
                 , aws
                 , base16-bytestring
                 , base64-bytestring
                 , basic-prelude
                 , blaze-builder
                 , blaze-html
                 , blaze-markup
                 , bytestring >= 0.9.2.1
                 , case-insensitive
                 , cereal
                 , classy-prelude
                 , classy-prelude-yesod
                 , conduit >= 1.0.15
                 , conduit-extra
                 , containers
                 , cryptohash
                 , csv-conduit
                 , data-default
                 , directory
                 , email-validate
                 , esqueleto
                 , exceptions
                 , fast-logger >= 2.1
                 , filepath
                 , file-embed
                 , file-location
                 , gravatar
                 , hsyslog
                 , html-conduit
                 , http-client-tls
                 , http-conduit
                 , http-types
                 , interpolatedstring-perl6
                 , lifted-base >= 0.2.0.2
                 , markdown
                 , mmorph
                 , monad-control
                 , monad-logger
                 , mtl
                 , mwc-random
                 , network-uri
                 , old-locale
                 , persistent
                 , persistent-postgresql
                 , pool-conduit
                 , postgresql-libpq
                 , postgresql-simple
                 , process
                 , random
                 , resourcet
                 , retry
                 , safe
                 , shakespeare
                 , streaming-commons
                 , system-fileio
                 , system-filepath
                 , tagsoup
                 , tagstream-conduit >= 0.5.5
                 , template-haskell
                 , temporary
                 , text
                 , time
                 , transformers
                 , unix >= 2.5.1.1
                 , uuid
                 , wai
                 , wai-app-static
                 , wai-conduit
                 , wai-extra >= 2.0
                 , wai-logger
                 , warp
                 , xml-conduit
                 , xml-types
                 , xss-sanitize
                 , yaml
                 , yesod
                 , yesod-core >= 1.4
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-sitemap
                 , yesod-static

executable         soh-site
    main-is:            main.hs
    hs-source-dirs:     src/main
    if flag(library-only)
        Buildable: False
    default-language:   Haskell2010
    build-depends:      soh-site
    ghc-options:        -Wall -fwarn-incomplete-record-updates -threaded -O2 -rtsopts -with-rtsopts=-T
    default-extensions: NoImplicitPrelude

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    default-language:  Haskell2010
    hs-source-dirs:    tests
    ghc-options:       -Wall -fwarn-incomplete-record-updates -threaded -with-rtsopts=-N -rtsopts -auto-all
    other-modules: FoundationTest
                   GroupDescTest
                   SecurityTokenTest
                   SerializationSpec
                   TestsMain
                   TutorialTest
    build-depends: base
                 , QuickCheck
                 , bytestring
                 , containers
                 , derive
                 , hspec
                 , soh-site
                 , persistent
                 , text

    -- Same extensions as soh-site
    default-extensions:
                BangPatterns
                ConstraintKinds
                DeriveDataTypeable
                DeriveFunctor
                DeriveGeneric
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                FunctionalDependencies
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                PatternGuards
                QuasiQuotes
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                StandaloneDeriving
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns
